--- a/public/en-assets/css/style.css
+++ b/public/en-assets/css/style.css
@@ -210,7 +210,7 @@ header .search-header {
 section#slider {
   position: relative;
   background-image: url(../images/main-slider.jpg);
-  background-color: #430022;
+  background-color: white;
   background-size: contain;
   overflow: hidden;
   min-width: 100%;
