--- a/public/assets/css/animate.css
+++ b/public/assets/css/animate.css
@@ -12,7 +12,7 @@
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+  animation-fill-mode: backwards;
 }
 
 .animated.infinite {
