--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -205,7 +205,7 @@ header .search-header {
 /* line 232, D:/JobsHTML/css/style.scss */
 section#slider {
   position: relative;
-  background-image: url(../images/main-slider.jpg);
+  /**background-image: url(../images/main-slider.jpg);**/
   background-color: white;
   background-size: 100%;
   overflow: hidden;
@@ -216,15 +216,30 @@ section#slider {
 
 /* line 244, D:/JobsHTML/css/style.scss */
 section#slider.class1 {
-  background-image: url(../images/main-slider2.jpg); }
+    -webkit-transition: 1.8s ease-in-out;
+    -moz-transition: 1.8s ease-in-out;
+    -o-transition: 1.8s ease-in-out;
+    transition: 1.8s ease-in-out;
+
+   }
 
 /* line 248, D:/JobsHTML/css/style.scss */
 section#slider.class2 {
-  background-image: url(../images/main-slider.jpg); }
+    -webkit-transition: 1.8s ease-in-out;
+    -moz-transition: 1.8s ease-in-out;
+    -o-transition: 1.8s ease-in-out;
+    transition: 1.8s ease-in-out;
+ }
 
 /* line 252, D:/JobsHTML/css/style.scss */
 section#slider.class3 {
-  background-image: url(../images/main-slider2.jpg); }
+    -webkit-transition: 1.8s ease-in-out;
+    -moz-transition: 1.8s ease-in-out;
+    -o-transition: 1.8s ease-in-out;
+    transition: 1.8s ease-in-out;   ;
+
+ }
+
 
 /**
 .swiper-container {
@@ -460,9 +475,51 @@ aside {
     /* line 486, D:/JobsHTML/css/style.scss */
     .content ul.jobs li {
       border: 1px solid #e1e1e1;
-      overflow: hidden;
+      /*overflow: hidden;*/
       padding: 0;
       margin: 5px auto; }
+
+/*
+      .content ul.jobs li .col-lg-2 img >.free
+      {
+            width: 250px;
+            height: 450px;
+            border: 1px solid gray;
+            position: absolute;
+            z-index: 9999999999;
+            display: block;
+            background: red;
+            float: none;
+            top: 0;
+            right: 100%;
+      }*/
+
+       .content ul.jobs li:hover .free
+      {
+            position: absolute;
+            z-index: 9999999999;
+            display: block;
+      }
+     .content ul.jobs li .free
+      {
+            width: 250px;
+            height: 400px;
+            border: 1px solid gray;
+            position: absolute;
+            z-index: 9999999999;
+            display: none;
+            background: red;
+            float: none;
+            top: 0;
+            right: 100%;
+      }
+
+           .content ul.jobs li .free img
+      {
+            width: 100%;
+            height: 400px !important;
+            max-height: 100%!important;
+      }
       /* line 490, D:/JobsHTML/css/style.scss */
       .content ul.jobs li .col-lg-2 {
         position: relative;
